\name{NEWS} \title{News for Package \pkg{rebmix}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2.10.2}{ 
\itemize{
\item Method \code{split} is improved.
}
}
\section{Changes in version 2.10.1}{ 
\itemize{
\item Fixed numerical problems related to high dimensional datasets.
\item Fixed bug in \code{REBMIX} method.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXPW()} and \code{REBMIXH()}.
\item Improved C++ functions \code{RoughEstimationKNN()}, \code{RoughEstimationPW()} and \code{RoughEstimationH()}.
}
}
\section{Changes in version 2.10.0}{ 
\itemize{
\item Fixed bug in \code{plot} method.
\item Additional argument \code{rseed} enters \code{boot} method.
\item Maximum number of nonempty bins has been introduced in C++ to avoid histograms with excessive number of nonempty bins.
}
}
\section{Changes in version 2.9.3}{ 
\itemize{
\item Acceleration rate has been improved. It is now progressively increasing.
\item The Newton-Raphson root finding in C++ functions has been improved. It affects only \code{"Weibull"}, \code{"gamma"} and \code{"vonMises"} parametric families.
}
}
\section{Changes in version 2.9.2}{ 
\itemize{
\item Continuous circular parametric family \code{"vonMises"} is added.
\item Fixed bug in C++ function \code{REBMIXH}.
\item Improved C++ functions \code{InformationCriterionKNN()}, \code{InformationCriterionPW()} and \code{InformationCriterionH()}.
\item Improved C++ functions \code{EnhancedEstimationKNN()}, \code{EnhancedEstimationPW()} and \code{EnhancedEstimationPW()}.
}
}
\section{Changes in version 2.9.1}{ 
\itemize{
\item Properly registered native routines and disabled symbol search in C++ code.
}
}
\section{Changes in version 2.9.0}{ 
\itemize{
\item Fixed bugs in \code{RCLRMIX} method.
}
}
\section{Changes in version 2.8.4}{ 
\itemize{
\item Method \code{Zp} is added.
\item Fixed bugs in \code{plot} method.
\item Fixed bugs in \code{split} method.